# palestinian_task

./: .gitignore  README.md  compose_texts.py  diarization.py  download_6mins_videos.py  emirati_playlists.txt  emirati_playlists_processed.txt  emirati_text_check.py  generate_google_correction_forms_V3.py  generate_google_sheet_passage_list.py  get_transcripts_metadata.py  input_manifest.json  palestinian_playlists_old.txt  palestinian_playlists_processed.txt  palestinian_playlists_videos_presampled.csv  palestinian_videos_trascripts_processed.txt  passage_selection.py  processed_files.txt  processed_transcripts.txt  pyproject.toml  text_correction.py  transcriptions.py  webm2mp4.sh
